[package]
name = "AoC-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1"
path = "src/day-1.rs"

[[bin]]
name = "day2"
path = "src/day-2.rs"

[[bin]]
name = "day3"
path = "src/day-3.rs"

[[bin]]
name = "day3-part-2"
path = "src/day-3-part-2.rs"

[[bin]]
name = "day4"
path = "src/day-4.rs"
